[gd_scene load_steps=2 format=3 uid="uid://b7ync1gcovvik"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_go4dg"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_go4dg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.000113828, 0.000113828, 0.000113828, 0.968627)

[node name="Add" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 92.0
offset_top = -32.0
offset_right = 237.0
offset_bottom = 33.0
grow_vertical = 2
text = "Addition"

[node name="Sub" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 352.0
offset_top = -32.0
offset_right = 497.0
offset_bottom = 33.0
grow_vertical = 2
text = "Subtract"

[node name="Div" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 619.0
offset_top = -32.0
offset_right = 764.0
offset_bottom = 33.0
grow_vertical = 2
text = "Divide"

[node name="Multi" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 893.0
offset_top = -32.0
offset_right = 1038.0
offset_bottom = 33.0
grow_vertical = 2
text = "Mutli"

[connection signal="pressed" from="ColorRect/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="ColorRect/Sub" to="." method="_on_sub_pressed"]
[connection signal="pressed" from="ColorRect/Div" to="." method="_on_div_pressed"]
[connection signal="pressed" from="ColorRect/Multi" to="." method="_on_multi_pressed"]
